Unified: Update VPN enabled status during open.

VPN feature pod button didn't update when VPN connection state changed
during UnifiedSystemTray is open. It was because it didn't observe the
network state change.

TEST=manual
BUG=896411

Change-Id: I1b9333b277dbcfc86265837b74a5864279b4b3ca
Reviewed-on: https://chromium-review.googlesource.com/c/1288333
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601023}