ash/system/network/vpn_feature_pod_controller.cc
@@ -29,7 +29,8 @@ namespace ash {
 
 VPNFeaturePodController::VPNFeaturePodController(
     UnifiedSystemTrayController* tray_controller)
-    : tray_controller_(tray_controller) {}
+    : network_state_observer_(std::make_unique<TrayNetworkStateObserver>(this)),
+      tray_controller_(tray_controller) {}
 
 VPNFeaturePodController::~VPNFeaturePodController() = default;
 
@@ -52,6 +53,10 @@ void VPNFeaturePodController::OnIconPressed() {
 
 SystemTrayItemUmaType VPNFeaturePodController::GetUmaType() const {
   return SystemTrayItemUmaType::UMA_VPN;
+}
+
+void VPNFeaturePodController::NetworkStateChanged(bool notify_a11y) {
+  Update();
 }
 
 void VPNFeaturePodController::Update() {
