ash/system/network/vpn_feature_pod_controller.h
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef ASH_SYSTEM_NETWORK_VPN_FEATURE_POD_CONTROLLER_H_
 #define ASH_SYSTEM_NETWORK_VPN_FEATURE_POD_CONTROLLER_H_
 
+#include "ash/system/network/tray_network_state_observer.h"
 #include "ash/system/unified/feature_pod_controller_base.h"
 #include "base/macros.h"
 #include "base/strings/string16.h"
@@ -15,7 +16,8 @@ namespace ash {
 class UnifiedSystemTrayController;
 
 // Controller of vpn feature pod button.
-class VPNFeaturePodController : public FeaturePodControllerBase {
+class VPNFeaturePodController : public FeaturePodControllerBase,
+                                public TrayNetworkStateObserver::Delegate {
  public:
   VPNFeaturePodController(UnifiedSystemTrayController* tray_controller);
   ~VPNFeaturePodController() override;
@@ -25,8 +27,13 @@ class VPNFeaturePodController : public FeaturePodControllerBase {
   void OnIconPressed() override;
   SystemTrayItemUmaType GetUmaType() const override;
 
+  // TrayNetworkStateObserver::Delegate:
+  void NetworkStateChanged(bool notify_a11y) override;
+
  private:
   void Update();
+
+  const std::unique_ptr<TrayNetworkStateObserver> network_state_observer_;
 
   // Unowned.
   UnifiedSystemTrayController* const tray_controller_;
